--- a/Error/src/Errors.csproj
+++ b/Error/src/Errors.csproj
@@ -1,4 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<Description>Companion errors for the CSharpFunctional extentions.</Description>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Include="..\README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+
 	<ItemGroup>
 		<PackageReference Include="CSharpFunctionalExtensions" />
 		<PackageReference Include="FluentValidation" />
