--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -2,11 +2,13 @@
   
    <!-- Runtime -->
   <ItemGroup>
+	  <PackageVersion Include="CSharpFunctionalExtensions" Version="2.37.0" />
+	  <PackageVersion Include="DotNet.ReproducibleBuilds" Version="1.1.1" />
 	  <PackageVersion Include="FluentValidation" Version="11.3.0" />
 	  <PackageVersion Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
 	  <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
+	  <PackageVersion Include="Nerdbank.GitVersioning" Version="3.5.119" />
 	  <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.4.0" />
-	  <PackageVersion Include="CSharpFunctionalExtensions" Version="2.37.0" />
   </ItemGroup>
 
   <!-- Test -->
