Update nuget package

--- a/Sample/Domain/Domain.csproj
+++ b/Sample/Domain/Domain.csproj
@@ -1,6 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="CSharpFunctionalExtensions" />
+    <PackageReference Include="FluentValidation" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\..\CSharpFunctionalExtensions.Errors\src\CSharpFunctionalExtensions.Errors.csproj" />
   </ItemGroup>
     
