--- a/Error/tests/Errors.Tests.csproj
+++ b/Error/tests/Errors.Tests.csproj
@@ -4,4 +4,11 @@
     <ProjectReference Include="..\src\Errors.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="coverlet.collector">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
