--- a/Sample/Domain/Domain.csproj
+++ b/Sample/Domain/Domain.csproj
@@ -1,12 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<ItemGroup>
+		<PackageReference Include="FluentValidation" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CSharpFunctionalExtensions" />
-    <PackageReference Include="FluentValidation" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\Error\src\Errors.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\CSharpFunctionalExtensions.Errors\src\CSharpFunctionalExtensions.Errors.csproj" />
-  </ItemGroup>
-    
 </Project>
