--- a/Sample/Domain/Domain.csproj
+++ b/Sample/Domain/Domain.csproj
@@ -1,10 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
+	
 	<ItemGroup>
 		<PackageReference Include="FluentValidation" />
 	</ItemGroup>
-
 	<ItemGroup>
-		<ProjectReference Include="..\..\Error\src\Errors.csproj" />
+	  <ProjectReference Include="..\..\Error\src\Errors.csproj" />
 	</ItemGroup>
 
 </Project>
