--- a/Sample/SampleAPI/SampleAPI.csproj
+++ b/Sample/SampleAPI/SampleAPI.csproj
@@ -1,5 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
+	<PropertyGroup>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
+	
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
